feat: implement RBAC, refresh tokens, token blacklisting, and rate limiting Security: - Add UserRole enum (USER, ADMIN) - Add role claims to JWT tokens (type: access/refresh) - Add RefreshTokenService for token refresh with Redis storage - Add TokenBlacklistService for invalidating tokens on logout - Update SecurityConfig with @EnableMethodSecurity and access denied handler - /v1/admin/** endpoints now require ROLE_ADMIN Authentication: - Add RefreshTokenController for /v1/auth/refresh endpoint - Update LoginResponse with accessToken, refreshToken, expiresIn, role - Update LogoutController to blacklist tokens and revoke refresh tokens - Add RefreshTokenRequest/RefreshTokenResponse models Rate Limiting: - Add Bucket4j + Redis rate limiting - RateLimitPlan: AUTH(10/min), API(100/min), MESSAGING(30/min), PHOTO(10/hr), REPORTS(5/day) - Add RateLimitFilter with X-RateLimit headers - Disable rate limiting in test/dev environments Testing: - Update all unit tests for new JWT structure - Update integration tests for new response format - All 361 tests passing